--- a/package.json
+++ b/package.json
@@ -1,22 +1,5 @@
 {
   "name": "breakapp",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Break Break - Film Production Management System",
-  "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "lint": "turbo run lint",
-    "test": "turbo run test",
-    "clean": "turbo run clean"
-  },
-  "devDependencies": {
-    "turbo": "^2.7.2"
-  },
-  "packageManager": "pnpm@10.27.0",
-  "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=10.0.0"
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
+    "react": "18.2.0",
+    "lucide-react": "0.300.0",
     "react-dom": "^19.2.3",
     "framer-motion": "^12.23.26"
   },
